@@ -1,4 +1,3 @@
-# $Author: ddumont $
 #    Copyright (c) 2007-2010 Dominique Dumont.
 #
 #    This file is part of Config-Model-Itself.
@@ -17,312 +16,319 @@
 #    along with Config-Model-Itself; if not, write to the Free Software
 #    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 
-my @warp_in_uniline_or_string = 
- (
- 	   warp => {  follow => { 'type' => '?type',
-				  'vtype' => '?value_type' ,
-				},
-		      'rules'
-		      => [ '    $type eq "leaf" 
+my @warp_in_uniline_or_string = (
+    warp => {
+        follow => {
+            'type'  => '?type',
+            'vtype' => '?value_type',
+        },
+        'rules' => [
+            '    $type eq "leaf" 
                             and (    $vtype eq "uniline" 
                                   or $vtype eq "string" 
                                 )
                           '
-			  => {
-			      level => 'normal',
-			     }
-			 ]
-		   },
+              => { level => 'normal', }
+        ]
+    },
 
- ) ;
+);
 
 [
- [
-  name => 'Itself::CommonElement',
+    [
+        name => 'Itself::CommonElement',
 
-  # warp often depend on this one, so list it first
-  'element'
-  => [
+        # warp often depend on this one, so list it first
+        'element' => [
 
-      'mandatory'
-      => { type => 'leaf',
-	   value_type => 'boolean',
-	   level => 'hidden',
-	   warp => { follow => '?type',
-		     'rules'
-		     => { 'leaf' => {
-				     upstream_default   => 0,
-				     level => 'normal',
-				    }
-			}
-		   }
-	 },
-      # node element (may be within a hash or list)
+            'mandatory' => {
+                type       => 'leaf',
+                value_type => 'boolean',
+                level      => 'hidden',
+                warp       => {
+                    follow  => '?type',
+                    'rules' => {
+                        'leaf' => {
+                            upstream_default => 0,
+                            level            => 'normal',
+                        }
+                    }
+                }
+            },
 
-      'config_class_name'
-      => {
-	  type => 'leaf',
-	  level => 'hidden',
-	  value_type => 'reference', 
-	  refer_to => '! class',
-	  warp => {  follow => { t => '?type' },
-		     rules  => [ '$t  eq "warped_node" '
-				 => {
-				     # should be able to warp refer_to ??
-				     level => 'normal',
-				    },
-				 '$t  eq "node"'
-				 => {
-				     # should be able to warp refer_to ??
-				     level => 'normal',
-				     mandatory => 1,
-				    },
-			       ]
-		  }
-	 },
+            # node element (may be within a hash or list)
 
-      # warped_node: warp parameter for warped_node. They must be
-      # warped out when type is not a warped_node
+            'config_class_name' => {
+                type       => 'leaf',
+                level      => 'hidden',
+                value_type => 'reference',
+                refer_to   => '! class',
+                warp       => {
+                    follow => { t => '?type' },
+                    rules  => [
+                        '$t  eq "warped_node" ' => {
 
-      # end warp elements for warped_node
+                            # should be able to warp refer_to ??
+                            level => 'normal',
+                        },
+                        '$t  eq "node"' => {
 
-      # leaf element
+                            # should be able to warp refer_to ??
+                            level     => 'normal',
+                            mandatory => 1,
+                        },
+                    ]
+                }
+            },
 
-      'choice'
-      => { type => 'list',
-	   level => 'hidden',
-	   description => 'Specify the possible values',
-	   warp => { follow => { t  => '?type',
-				 vt => '?value_type',
-			       },
-		     'rules'
-		     => [ '  ($t eq "leaf" and (   $vt eq "enum" 
+            # warped_node: warp parameter for warped_node. They must be
+            # warped out when type is not a warped_node
+
+            # end warp elements for warped_node
+
+            # leaf element
+
+            'choice' => {
+                type        => 'list',
+                level       => 'hidden',
+                description => 'Specify the possible values',
+                warp        => {
+                    follow => {
+                        t  => '?type',
+                        vt => '?value_type',
+                    },
+                    'rules' => [
+                        '  ($t eq "leaf" and (   $vt eq "enum" 
                                                 or $vt eq "reference")
                              )
-                           or $t eq "check_list"' 
-			  => {
-			      level => 'normal',
-			     } ,
-			]
-		   },
-	   cargo => { type => 'leaf', value_type => 'uniline'},
-	 },
+                           or $t eq "check_list"' => { level => 'normal', },
+                    ]
+                },
+                cargo => { type => 'leaf', value_type => 'uniline' },
+            },
 
-      'min'
-      => { type => 'leaf',
-	   value_type => 'integer',
-	   level => 'hidden',
-	   description => 'minimum value',
-	   experience => 'advanced',
-	   warp => { follow => {
-				'type'  => '?type',
-				'vtype' => '?value_type' ,
-			       },
-		     'rules'
-		     => [ '    $type eq "leaf" 
+            'min' => {
+                type        => 'leaf',
+                value_type  => 'integer',
+                level       => 'hidden',
+                description => 'minimum value',
+                experience  => 'advanced',
+                warp        => {
+                    follow => {
+                        'type'  => '?type',
+                        'vtype' => '?value_type',
+                    },
+                    'rules' => [
+                        '    $type eq "leaf" 
                            and (    $vtype eq "integer" 
                                  or $vtype eq "number" 
                                )
                           '
-			  => {
-			      level => 'normal',
-			     }
-			]
-		   }
-	 },
+                          => { level => 'normal', }
+                    ]
+                }
+            },
 
-      'max'
-      => { type => 'leaf',
-	   value_type => 'integer',
-	   level => 'hidden',
-	   description => 'maximum value',
-	   experience => 'advanced',
-	   warp => { follow => {
-				'type'  => '?type',
-				'vtype' => '?value_type' ,
-			       },
-		     'rules'
-		     => [ '    $type eq "leaf" 
+            'max' => {
+                type        => 'leaf',
+                value_type  => 'integer',
+                level       => 'hidden',
+                description => 'maximum value',
+                experience  => 'advanced',
+                warp        => {
+                    follow => {
+                        'type'  => '?type',
+                        'vtype' => '?value_type',
+                    },
+                    'rules' => [
+                        '    $type eq "leaf" 
                            and (    $vtype eq "integer" 
                                  or $vtype eq "number" 
                                )
                           '
-			  => {
-			      level => 'normal',
-			     }
-			]
-		   }
-	 },
+                          => { level => 'normal', }
+                    ]
+                }
+            },
 
-      'min_index'
-      => { type => 'leaf',
-	   value_type => 'integer',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => 'minimum number of indexes',
-	   warp => { follow => {'type'  => '?type',},
-		     'rules'
-		     => [ '$type eq "hash" or $type eq "list"'
-			  => {level => 'normal',},
-			]
-		   }
-	 },
+            'min_index' => {
+                type        => 'leaf',
+                value_type  => 'integer',
+                level       => 'hidden',
+                experience  => 'advanced',
+                description => 'minimum number of indexes',
+                warp        => {
+                    follow  => { 'type' => '?type', },
+                    'rules' => [
+                        '$type eq "hash" or $type eq "list"' =>
+                          { level => 'normal', },
+                    ]
+                }
+            },
 
-      'max_index'
-      => { type => 'leaf',
-	   value_type => 'integer',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => 'maximum number of keys',
-	   warp => { follow => {'type'  => '?type',},
-		     'rules'
-		     => [ '$type eq "hash" or $type eq "list"'
-			  => {level => 'normal',},
-			]
-		   }
-	 },
+            'max_index' => {
+                type        => 'leaf',
+                value_type  => 'integer',
+                level       => 'hidden',
+                experience  => 'advanced',
+                description => 'maximum number of keys',
+                warp        => {
+                    follow  => { 'type' => '?type', },
+                    'rules' => [
+                        '$type eq "hash" or $type eq "list"' =>
+                          { level => 'normal', },
+                    ]
+                }
+            },
 
-      'default'
-      => { type => 'leaf',
-	   level => 'hidden',
-	   value_type => 'uniline',
-	   description => 'Specify default value. This default value will be written in the configuration data',
-	   warp => {  follow => { 't' => '?type' },
-		      'rules'
-		      => [ '$t eq "leaf"' 
-			   => {
-			       level => 'normal',
-			      }
-			 ]
-		   }
-	 },
+            'default' => {
+                type       => 'leaf',
+                level      => 'hidden',
+                value_type => 'uniline',
+                description => 'Specify default value. This default value will be written in the configuration data',
+                warp => {
+                    follow  => { 't'            => '?type' },
+                    'rules' => [ '$t eq "leaf"' => { level => 'normal', } ]
+                }
+            },
 
-      'upstream_default'
-      => { type => 'leaf',
-	   level => 'hidden',
-	   value_type => 'uniline',
-	   description => 'Another way to specify a default value. But this default value is considered as "built_in" the application and is not written in the configuration data (unless modified)',
-	   warp => {  follow => { 't' => '?type' },
-		      'rules'
-		      => [ '$t eq "leaf"' 
-			   => {
-			       level => 'normal',
-			      }
-			 ]
-		   }
-	 },
+            'upstream_default' => {
+                type       => 'leaf',
+                level      => 'hidden',
+                value_type => 'uniline',
+                description => 'Another way to specify a default value. But this default value is considered as "built_in" the application and is not written in the configuration data (unless modified)',
+                warp => {
+                    follow  => { 't'            => '?type' },
+                    'rules' => [ '$t eq "leaf"' => { level => 'normal', } ]
+                }
+            },
 
-      'convert'
-      => { type => 'leaf',
-	   value_type => 'enum',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => 'When stored, the value will be converted to uppercase (uc) or lowercase (lc).',
-	   warp => {  follow => { 't' => '?type'},
-		      'rules'
-		      => [ '$t eq "leaf"'
-			   => {
-			       choice => [qw/uc lc/],
-			       level => 'normal',
-			      }
-			 ]
-		   }
-	 },
+            'convert' => {
+                type       => 'leaf',
+                value_type => 'enum',
+                level      => 'hidden',
+                experience => 'advanced',
+                description => 'When stored, the value will be converted to uppercase (uc) or lowercase (lc).',
+                warp => {
+                    follow  => { 't' => '?type' },
+                    'rules' => [
+                        '$t eq "leaf"' => {
+                            choice => [qw/uc lc/],
+                            level  => 'normal',
+                        }
+                    ]
+                }
+            },
 
+            'match' => {
+                type       => 'leaf',
+                value_type => 'uniline',
+                level      => 'hidden',
+                experience => 'advanced',
+                description => 'Perl regular expression to assert the validity of the value.',
+                @warp_in_uniline_or_string,
+            },
 
-      'match'
-      => { type => 'leaf',
-	   value_type => 'uniline',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => 'Perl regular expression to assert the validity of the value.',
-	   @warp_in_uniline_or_string,
-	 },
+            'warn_if_match' => {
+                type       => 'leaf',
+                value_type => 'uniline',
+                level      => 'hidden',
+                experience => 'advanced',
+                description =>
+                  'Warn user if value matches the regular expression',
+                @warp_in_uniline_or_string,
+            },
 
-      'warn_if_match'
-      => { type => 'leaf',
-	   value_type => 'uniline',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => 'Warn user if value matches the regular expression',
-	   @warp_in_uniline_or_string,
-	 },
+            'warn_unless_match' => {
+                type       => 'leaf',
+                value_type => 'uniline',
+                level      => 'hidden',
+                experience => 'advanced',
+                description =>
+                  'Warn user if value does not match the regular expression',
+                @warp_in_uniline_or_string,
+            },
 
-      'warn_unless_match'
-      => { type => 'leaf',
-	   value_type => 'uniline',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => 'Warn user if value does not match the regular expression',
-	   @warp_in_uniline_or_string,
-	 },
-
-      'warn'
-      => { type => 'leaf',
-	   value_type => 'uniline',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => 'Unconditionaly issue a warning with this string when this paramater is used. This should be used mostly with "accept"',
-	   warp => { follow => { t => '?type' },
-		     'rules' => [ '$t eq "leaf"' => { level => 'normal', } , ]
-		   },
-	 },
-
-      'grammar'
-      => { type => 'leaf',
-	   value_type => 'string',
-	   level => 'hidden',
-	   experience => 'advanced',
-	   description => "Feed this grammar to Parse::RecDescent to perform validation",
-	   @warp_in_uniline_or_string,
-	 },
-
-
-      'default_list'
-      => { type => 'check_list',
-	   level => 'hidden',
-	   refer_to => '- choice',
-	   description => 'Specify items checked by default',
-	   warp => { follow => { t => '?type', o => '?ordered' },
-		     'rules'
-		     => [ '$t eq "check_list" and not $o ' 
-			  => {
-			      level => 'normal',
-			     } ,
-			  '$t eq "check_list" and $o ' 
-			  => {
-			      level => 'normal',
-			      ordered => 1 ,
-			     } ,
-			]
-		   },
-	 },
-
-      'upstream_default_list'
-      => { type => 'check_list',
-	   level => 'hidden',
-	   refer_to => '- choice',
-	   description => 'Specify items checked by default in the application',
-	   warp => { follow => { t => '?type', o => '?ordered' },
-		     'rules'
-		     => [ '$t eq "check_list" and not $o ' 
-			  => {
-			      level => 'normal',
-			     } ,
-			  '$t eq "check_list" and $o ' 
-			  => {
-			      level => 'normal',
-			      ordered => 1 ,
-			     } ,
-			]
-		   },
-	 },
-
-      # hash element
-
-      # list element
+            'warn_message' => {
+                type       => 'leaf',
+                value_type => 'uniline',
+                level      => 'hidden',
+                experience => 'advanced',
+                description => 'Custom message to display with warn_if_match or warn_unless_match',
+                warp => {
+                    follow => {
+                        warn_if => '?warn_if_match',
+                        warn_unless => '?warn_unless_match',
+                    },
+                    'rules' => [ '$warn_if ne "" or $warn_unless ne ""' 
+                                    => { level => 'normal', }, 
+                    ]
+                },
+            },
+            'warn' => {
+                type       => 'leaf',
+                value_type => 'uniline',
+                level      => 'hidden',
+                experience => 'advanced',
+                description => 'Unconditionaly issue a warning with this string when this parameter is used. This should be used mostly with "accept"',
+                warp => {
+                    follow  => { t              => '?type' },
+                    'rules' => [ '$t eq "leaf"' => { level => 'normal', }, ]
+                },
+            },
 
 
-     ],
- ],
+            'grammar' => {
+                type       => 'leaf',
+                value_type => 'string',
+                level      => 'hidden',
+                experience => 'advanced',
+                description =>
+"Feed this grammar to Parse::RecDescent to perform validation",
+                @warp_in_uniline_or_string,
+            },
+
+            'default_list' => {
+                type        => 'check_list',
+                level       => 'hidden',
+                refer_to    => '- choice',
+                description => 'Specify items checked by default',
+                warp        => {
+                    follow  => { t => '?type', o => '?ordered' },
+                    'rules' => [
+                        '$t eq "check_list" and not $o ' =>
+                          { level => 'normal', },
+                        '$t eq "check_list" and $o ' => {
+                            level   => 'normal',
+                            ordered => 1,
+                        },
+                    ]
+                },
+            },
+
+            'upstream_default_list' => {
+                type     => 'check_list',
+                level    => 'hidden',
+                refer_to => '- choice',
+                description =>
+                  'Specify items checked by default in the application',
+                warp => {
+                    follow  => { t => '?type', o => '?ordered' },
+                    'rules' => [
+                        '$t eq "check_list" and not $o ' =>
+                          { level => 'normal', },
+                        '$t eq "check_list" and $o ' => {
+                            level   => 'normal',
+                            ordered => 1,
+                        },
+                    ]
+                },
+            },
+
+            # hash element
+
+            # list element
+
+        ],
+    ],
 ];
